syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Todo.ApiGateway.TodoProto.Query";

package todo.query;

service Tasks {
  rpc Filter (FilterRequest) returns (FilterResponse);
  rpc Find (FindRequest) returns (FindResponse);
  rpc SimilarTitleExists (SimilarTitleExistsRequest) returns (SimilarTitleExistsResponse);
  rpc Notifications (google.protobuf.Empty) returns (stream NotificationResponse);
}

message FilterRequest {
  google.protobuf.Int32Value page = 1;
  google.protobuf.Int32Value size = 2;
  google.protobuf.BoolValue is_completed = 3;
  google.protobuf.StringValue user_id = 4;
  google.protobuf.Timestamp due_date_from = 5;
  google.protobuf.Timestamp due_date_to = 6;
}

message FilterResponse {
  int32 page = 1;
  int32 size = 2;
  int32 total = 3;
  repeated TaskFilterOutput tasks = 4;
}

message TaskFilterOutput {
  string id = 1;
  string user_id = 2;
  string title = 3;
  google.protobuf.Timestamp due_date = 4;
  bool is_completed = 5;
  bool duplicate_title = 6;
}

message FindRequest {
  string id = 1;
}

message FindResponse {
  string id = 1;
  string user_id = 2;
  string title = 3;
  google.protobuf.Timestamp due_date = 4;
  google.protobuf.StringValue note = 5;
  bool is_completed = 6;
  bool duplicate_title = 7;
}

message SimilarTitleExistsRequest {
  string user_id = 1;
  string title = 2;
}

message SimilarTitleExistsResponse {
  google.protobuf.StringValue id = 1;
  bool exists = 2;
}

message NotificationResponse {
	string type = 1;
	TaskOutput task = 2;
	ConsumedEvent event = 3;
}

message TaskOutput {
  string id = 1;
  string user_id = 2;
  string title = 3;
  google.protobuf.Timestamp due_date = 4;
  google.protobuf.StringValue note = 5;
  bool is_completed = 6;
  bool duplicate_title = 7;
}

message ConsumedEvent {
  string aggregate_id = 1;
  string user_id = 2;
  int32 sequence = 3;
  google.protobuf.Timestamp date_time = 4;
  int32 version = 5;
  google.protobuf.StringValue data = 6;
}